--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
     padding: 0;
     margin: 0;
 }
-.nav a:hover,
-.nav li.active a {
+.navbar a:hover,
+.navbar li.active a,
+.navbar li a.active {
     color: var(--branding-color) !important;
 }
 h1 {
@@ -49,7 +50,7 @@ h4 {
     font-size: 36px;
     font-weight: bolder;
     line-height: 1.5;
-    margin-left: 30px;
+    margin-left: 25px;
 }
 h6 {
     font-weight: 500;
@@ -102,20 +103,22 @@ div .brand {
     cursor: pointer;
 }
 .design {
-    margin-bottom: 20px;
+    margin: 30px auto;
     text-align: center;
     border: 10px solid white;
     background: var(--secondry-color);
 }
 .design p {
-    font-size:  27px !important;
-line-height: 30px;
+    font-size:  20px !important;
 margin-top: 10px;
 line-height: 40px;
-margin-bottom: 15px;
+margin-bottom: 30px;
+border-radius: 5px;;
 }
 .container-design {
     margin-top: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
 
 }
 .design:hover {
@@ -124,6 +127,7 @@ box-shadow: 5px 5px 5px rgb(125, 90, 141)
 }
 ul li {
     list-style: none;
+    font-weight: 900;
 }
 ul li a {
     text-decoration:none;
@@ -132,10 +136,19 @@ ul li a {
     font-weight: 500;
 }
 ul li a:hover,
- li.active {
+ ul li.active {
     color: var(--branding-color);
     text-decoration: none;
 }
 footer {
     margin-top: 100px;
+}
+.picture {
+    margin-left: -35px;
+}
+.right-pic {
+    margin-right: 35px;
+}
+.picture2 {
+margin-left: -2px;
 }
