--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ h6 {
     font-weight: 500;
     margin-top: 10px;
     color: black;
+    font-weight: 900;
 }
 .btn-branding {
     background: var(--branding-color);
@@ -152,3 +153,12 @@ footer {
 .picture2 {
 margin-right: -5px;
 }
+.picture5 {
+    margin-top: 60px;
+}
+.picture8 {
+   margin-top: 75px;
+}
+#picture9 {
+    margin-top: 130px;
+ }
