--- a/style.css
+++ b/style.css
@@ -12,14 +12,16 @@ body {
  font-family: 'Zilla Slab', serif;
 }
 .navbar {
-    background: white;
-    padding: 0;
-    margin: 0;
+    height: 70px;
+    font-size: 24px;
+    position: fixed;
+    justify-content: flex-end !important;
 }
 .navbar a:hover,
 .navbar li.active a,
 .navbar li a.active {
     color: var(--branding-color) !important;
+    
 }
 h1 {
     
@@ -88,8 +90,11 @@ h6 {
 }
 
 p {
+    line-height: 20px;
+    font-size: 18px;
+}
+.paragraph {
     line-height: 26px;
-    font-size: 15px;
 }
 .about-us {
     margin-top: 200px;
@@ -108,6 +113,7 @@ div .brand {
     text-align: center;
     border: 10px solid white;
     background: var(--secondry-color);
+    transition: all 0.4s ease 0s;
 }
 .design p {
     font-size:  20px !important;
@@ -123,26 +129,57 @@ border-radius: 5px;;
 
 }
 .design:hover {
-    background: white;
-box-shadow: 5px 5px 5px rgb(125, 90, 141)
+    box-shadow: 0px 15px 30px rgb(77 87 222 / 30%);
+    background: #fff;
+
 }
-ul li {
+.links ul li {
     list-style: none;
-    font-weight: 900;
+    display: inline-block;
+    margin-top: 70px;
+    margin-bottom: 30px;
 }
-ul li a {
+.links ul li a {
+    color:black;
     text-decoration:none;
     margin-right: 50px;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 900;
 }
-ul li a:hover,
- ul li.active {
-    color: var(--branding-color);
+.links ul li a:hover,
+ .links ul li a.active {
+    color: var(--branding-color); 
     text-decoration: none;
 }
-footer {
-    margin-top: 100px;
+footer { padding: 400px 0 110px 0;
+    text-align: center;
+background: var(--secondry-color);
+}
+footer div a{
+    font-size: 15px !important;
+    color: var(--branding-color);
+    margin:-18px;
+}
+footer div a:hover {
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--branding-color);
+}
+footer a{
+    color: #788489;
+    font-size: 22px;
+    padding: 20px;
+}
+footer p{
+    font-size: 20px;
+    font-weight: bold;
+}
+footer div {
+    font-size: 15px;
+margin-top: 10px;
+
 }
 .picture {
     margin-left: -35px;
