--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@ body {
  font-family: 'Zilla Slab', serif;
 }
 .navbar {
+    position: fixed;
+    background: white;
+    width: 100%;
     height: 70px;
     font-size: 24px;
-    position: fixed;
     justify-content: flex-end !important;
 }
 .navbar a:hover,
@@ -31,10 +33,10 @@ h1 {
     margin-bottom: 25px;
     font-weight: 900;
 }
-h2 {
+h2 {margin-top: 60px;
     font-weight: 500;
     font-size: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 h3 {
     font-weight: 700;
